# project-structure-templates

./: .editorconfig  README.md
.github/workflows/: ci.yaml
src/c-lang/: empty.style
src/configs/: .editorconfig  Cargo.toml  meson.build  package.json
src/godot/: code.class_template.empty.style  code.class_template.minimal.style
src/java/: class_template.empty.style  class_template.minimal.style  code.a.empty.style  code.class_template.empty.style  code.class_template.minimal.style
src/misc/: README.md
src/python/: code.a.empty.style  code.b.empty.style  code.b.minimal.style  code.class_template.empty.style  code.procedural_template.minimal.style  procedural_template.empty.style  procedural_template.minimal.style
src/rust/: astral_template.empty.style  maximus_template.empty.style
src/typescript/: class_template.empty.style  code.class_template.empty.style  code.class_template.minimal.style
templates/c-lang/: empty.style
templates/configs/: .editorconfig  Cargo.toml  meson.build  package.json  toml.Cargo  tsconfig.json
templates/godot/code/class_template/: style.empty  style.minimal
templates/java/class_template/: minimal.style
templates/java/code/a/: style.empty
templates/java/code/class_template/: style.empty  style.minimal
templates/misc/: README.md
templates/python/code/a/: style.empty
templates/python/code/b/: style.empty  style.minimal
templates/python/code/class_template/: style.empty
templates/python/code/procedural_template/: style.empty  style.minimal
templates/python/procedural_template/: empty.style
templates/rust/astral_template/: empty.style
templates/typescript/class_template/: empty.style  minimal.style
templates/typescript/code/class_template/: style.empty  style.minimal
util/: ci.py  dict.json
