# %TEMPLATE_PROJECT_NAME% || Cargo.toml
# --------------------------------
# Rust manifest file.
#
# Authors: %TEMPLATE_AUTHOR_HEADER%
# ----------------------------------------------------------------

# Package Info
[package]
name = "%TEMPLATE_PROJECT_NAME%"
version = "0.1.0"
authors = ["%TEMPLATE_AUTHOR_HEADER%"]
edition = "2021"
rust-version = "1.56.0"
description = "My Project"
readme = "README.md"
homepage = "%TEMPLATE_PROJECT_HOMEPAGE%"
repository = "%TEMPLATE_PROJECT_REPOSITORY%"
license = "GPL-3.0-only"
keywords = []
categories = []
build = false

# Dependencies
[dependencies]

# Debugging Profile
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = false
codegen-units = 256
rpath = false

# Release Profile
[profile.release]
opt-level = 3
debug = false
split-debuginfo = "off"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 16
rpath = true
